--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation libs.javaparser.core
 
     implementation project(":nodes")
+    implementation project(":codeview")
     
     implementation (libs.android.code.view){
         exclude group: 'com.android.support', module: 'support-compat'
