--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     implementation libs.javaparser.core
 
+    implementation libs.janino
+
     implementation project(":node")
     implementation project(":codeview")
 
